--- a/style/index.css
+++ b/style/index.css
@@ -32,11 +32,14 @@ header nav {
     display: flex;
 }
 
-p {
-    margin-right: 20px;
+header nav p {
     font: 500 22px 'DM Sans';
     letter-spacing: -0.03em;
     color: #181717;
+}
+
+header nav p:not(:last-child) {
+    margin-right: 20px;
 }
 
 .previau {
@@ -68,6 +71,11 @@ p {
     background-repeat: no-repeat;
     background-size: contain;
     margin-top: 128px;
+    position: relative;
+}
+
+.arrow:hover {
+    top: 2px;
 }
 
 .portfolio {
@@ -191,13 +199,13 @@ footer {
 }
 
 .linkedin {
-    margin-right: 44px;
+
     font: 500 22px 'DM Sans';
     color: #181717;
 }
 
 .tg {
-    margin-right: 32px;
+
     font: 500 21px 'DM Sans';
     color: #181717;
 
@@ -206,4 +214,8 @@ footer {
 .name {
     font: 500 22px 'DM Sans';
     color: #2429AF;
+}
+
+footer nav p:not(:last-child) {
+    padding-right: 20px;
 }
