--- a/style/index.css
+++ b/style/index.css
@@ -17,6 +17,9 @@ header {
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
+    position: sticky;
+    left: 0;
+    top: 0;
 }
 
 
