--- a/style/contact.css
+++ b/style/contact.css
@@ -34,10 +34,14 @@ header nav {
     display: flex;
 }
 
-header nav p {
-    font: 500 22px 'DM Sans';
-    letter-spacing: -0.03em;
+header nav p a {
     color: #181717;
+    font: 500 22px 'DM Sans';
+    text-decoration: none;
+}
+
+header nav p a:hover {
+    text-decoration: underline;
 }
 
 header nav p:not(:last-child) {
@@ -107,14 +111,14 @@ main p {
 }
 
 main button {
-background: #000000;
-border-radius: 5px;
-margin-top: 27px;
-width: 162px;
-height: 42px;
-font: 700 18px 'DM Sans';
-color: #FFFFFF;
-border: 1px solid #000000;
+    background: #000000;
+    border-radius: 5px;
+    margin-top: 27px;
+    width: 162px;
+    height: 42px;
+    font: 700 18px 'DM Sans';
+    color: #FFFFFF;
+    border: 1px solid #000000;
 }
 
 
