--- a/style/abaut.css
+++ b/style/abaut.css
@@ -72,7 +72,7 @@ main {
 }
 
 .image {
-    background-image: url(../img/012112.svg);
+    background-image: url(../img/програм-11.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     width: 405px;
